# OS

fifth_laboratory_work/: .env.example
fifth_laboratory_work/client/: client.go
fifth_laboratory_work/middleware/: temperature_reader.cpp  temperature_reader.hpp
fifth_laboratory_work/server/: handler.cpp  handler.hpp
fifth_laboratory_work/services/: database_manager.hpp
first_laboratory_work/: Makefile  main.cpp
first_laboratory_work/script/: sinc_git.cmd  sinc_git.sh
fourth_laboratory_work/: Makefile  temperature_reader.cpp  temperature_simulator.cpp
second_laboratory_work/: Makefile  process_launcher.c  process_launcher.h  test_process_launcher.c
seventh_laboratory_work/: go.mod
seventh_laboratory_work/kiosk/: Readme  kiosk.go  kiosk.service
seventh_laboratory_work/server/: temperature_server.cpp
seventh_laboratory_work/services/: temperature_gui.cpp
sixth_laboratory_work/: CMakeLists.txt  gui.pro
sixth_laboratory_work/middleware/: temperature_reader.cpp
sixth_laboratory_work/services/: database_manager.cpp  database_manager.hpp  temperature_graphs.cpp  temperature_graphs.hpp  temperature_simulator.cpp
third_laboratory_work/: Makefile  multi_process_launcher.c  multi_process_launcher.h  test_multi_process_launcher.c
